--- a/src/assets/css/default.scss
+++ b/src/assets/css/default.scss
@@ -2,6 +2,17 @@
 .login, .sys{
   position: absolute;
   width: 100%;
-  min-height: 100%;
+  height: 100%;
+  overflow: hidden;
   background-color: #324157;
+}
+.router-view{
+  position: absolute;
+  top: 70px;
+  left: 250px;
+  right: 0;
+  bottom: 0;
+  padding: 60px;
+  overflow-y: scroll;
+  background-color: white;
 }
