--- a/src/assets/css/default.scss
+++ b/src/assets/css/default.scss
@@ -1,4 +1,8 @@
 *{margin:0;padding:0;}
+.login{
+  background: #324157 url(./assets/img/login_bg.jpg);
+  background-size: 100% 100%;
+}
 .login, .sys{
   position: absolute;
   width: 100%;
